--- a/public/tester.html
+++ b/public/tester.html
@@ -356,6 +356,20 @@
   transition: transform 6s cubic-bezier(0.33, 1, 0.68, 1);
   transform: rotate(0deg);
 }
+#wheel {
+  transition: transform 6s cubic-bezier(0.33, 1, 0.68, 1);
+  transform: rotate(0deg); /* default */
+}
+
+#wheel.spin {
+  /* nanti class ini ditambahin via JS pas tombol spin di-click */
+}
+#wheel-img {
+  width: 100%;
+  max-width: 500px;
+  transition: transform 6s cubic-bezier(0.33, 1, 0.68, 1);
+  transform: rotate(0deg);
+}
   </style>
 </head>
 <body>
@@ -366,7 +380,7 @@
   <div class="form-kupon">
     <input id="user-id" type="text" placeholder="Masukkan ID Pengguna">
     <input id="kupon" type="text" placeholder="Masukkan Kode Kupon">
-    <button onclick="cekKupon()">Submit</button>
+    <button onclick="spin()">SPIN!</button>
   </div>
   <div class="main-layout">
     <div class="left-panel">
@@ -391,10 +405,10 @@
 
     <div id="wheel-section">
       <div class="wheel-container">
-        <div class="pointer"></div>
-        <img id="wheel" src="https://projectwarna.com/kuningtoto/Wheel-Of-Fortune.png" alt="Wheel" style="width: 100%; transform: rotate(0deg); transition: transform 6s cubic-bezier(0.33, 1, 0.68, 1);">
+        <img src="https://projectwarna.com/kuningtoto/Pointer.png" id="pointer" alt="Pointer">
+        <img src="https://projectwarna.com/kuningtoto/Wheel-Of-Fortune.png" id="wheel" alt="Wheel">
       </div>
-      <button class="spin-btn" onclick="spin()">Spin Sekarang!</button>
+      <button onclick="spin()">SPIN!</button>
     </div>
   </div>
 
@@ -404,9 +418,7 @@
   </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/zarocknz/javascript-winwheel/Winwheel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/zarocknz/javascript-winwheel/Winwheel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <script>
     const hadiahList = [
@@ -459,6 +471,46 @@ function cekKupon() {
       initWheel();
     })
     .catch(() => alert("⚠️ Gagal cek kupon. Pastikan server jalan!"));
+}
+
+let isSpinning = false;
+let hadiahTerpilih = '';
+const wheel = document.getElementById('wheel');
+
+function getRandomHadiahIndexByWeight() {
+  const total = hadiahList.reduce((sum, h) => sum + h.weight, 0);
+  const rand = Math.random() * total;
+  let acc = 0;
+  for (let i = 0; i < hadiahList.length; i++) {
+    acc += hadiahList[i].weight;
+    if (rand <= acc) return i;
+  }
+  return hadiahList.length - 1;
+}
+
+let totalRotation = 0;
+
+function spin() {
+  if (isSpinning) return;
+  isSpinning = true;
+
+  const index = getRandomHadiahIndexByWeight(); // dari sistem lo sebelumnya
+  const slice = 360 / hadiahList.length;
+  const stopAngle = (index * slice) + (slice / 2);
+
+  const spins = 10 * 360; // 10 putaran
+  totalRotation += spins + stopAngle;
+
+  const wheel = document.getElementById("wheel-img");
+  wheel.style.transform = `rotate(${totalRotation}deg)`;
+
+  hadiahTerpilih = hadiahList[index].text;
+
+  setTimeout(() => {
+    alert("🎉 Kamu dapet: " + hadiahTerpilih);
+    // lanjut log ke backend seperti sebelumnya
+    isSpinning = false;
+  }, 6200);
 }
 
 function initWheel() {
