--- a/public/tester.html
+++ b/public/tester.html
@@ -380,7 +380,7 @@
   <div class="form-kupon">
     <input id="user-id" type="text" placeholder="Masukkan ID Pengguna">
     <input id="kupon" type="text" placeholder="Masukkan Kode Kupon">
-    <button onclick="spin()">SPIN!</button>
+    <button class="spin-btn" onclick="spin()">Spin Sekarang!</button>
   </div>
   <div class="main-layout">
     <div class="left-panel">
@@ -408,7 +408,7 @@
         <img src="https://projectwarna.com/kuningtoto/Pointer.png" id="pointer" alt="Pointer">
         <img src="https://projectwarna.com/kuningtoto/Wheel-Of-Fortune.png" id="wheel" alt="Wheel">
       </div>
-      <button onclick="spin()">SPIN!</button>
+      <button class="spin-btn" onclick="spin()">Spin Sekarang!</button>
     </div>
   </div>
 
@@ -488,27 +488,57 @@ function getRandomHadiahIndexByWeight() {
   return hadiahList.length - 1;
 }
 
-let totalRotation = 0;
-
 function spin() {
-  if (isSpinning) return;
+  const spinBtn = document.querySelector(".spin-btn");
+  const wheel = document.getElementById("wheel");
+  const userId = document.getElementById("user-id").value.trim();
+  const kode = document.getElementById("kupon").value.trim();
+
+  if (isSpinning || !wheel || !spinBtn) return;
   isSpinning = true;
 
-  const index = getRandomHadiahIndexByWeight(); // dari sistem lo sebelumnya
-  const slice = 360 / hadiahList.length;
-  const stopAngle = (index * slice) + (slice / 2);
+  spinBtn.disabled = true;
+  spinBtn.textContent = "⏳ Memutar...";
+  spinBtn.style.opacity = 0.6;
 
-  const spins = 10 * 360; // 10 putaran
-  totalRotation += spins + stopAngle;
-
-  const wheel = document.getElementById("wheel-img");
-  wheel.style.transform = `rotate(${totalRotation}deg)`;
-
+  const index = getRandomHadiahIndexByWeight();
   hadiahTerpilih = hadiahList[index].text;
 
+  const sliceAngle = 360 / hadiahList.length;
+  const baseRotation = 360 * 10;
+  const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+  const stopAngle = index * sliceAngle + (sliceAngle / 2) + offset;
+  const finalRotation = baseRotation + stopAngle;
+
+  // Muter pake CSS
+  wheel.style.transition = 'transform 6s cubic-bezier(0.33, 1, 0.68, 1)';
+  wheel.style.transform = `rotate(${finalRotation}deg)`;
+
   setTimeout(() => {
-    alert("🎉 Kamu dapet: " + hadiahTerpilih);
-    // lanjut log ke backend seperti sebelumnya
+    alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
+
+    // Push ke live feed
+    pushLiveFeed(userId, hadiahTerpilih);
+
+    // Log ke backend
+    fetch("/api/log-spin", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
+    });
+
+    // Ganti tombol buat next step
+    spinBtn.textContent = "🎁 Klaim Hadiah";
+    spinBtn.disabled = false;
+    spinBtn.style.opacity = 1;
+    spinBtn.onclick = () => {
+      if (hadiahTerpilih.toLowerCase().includes("zonk")) {
+        location.reload();
+      } else {
+        window.location.href = "https://direct.lc.chat/14680344/";
+      }
+    };
+
     isSpinning = false;
   }, 6200);
 }
