--- a/public/tester.html
+++ b/public/tester.html
@@ -380,7 +380,7 @@
   <div class="form-kupon">
     <input id="user-id" type="text" placeholder="Masukkan ID Pengguna">
     <input id="kupon" type="text" placeholder="Masukkan Kode Kupon">
-    <button class="submit-btn" onclick="cekKupon()">Submit</button>
+    <button onclick="cekKupon()">Submit</button>
   </div>
   <div class="main-layout">
     <div class="left-panel">
