--- a/public/tester.html
+++ b/public/tester.html
@@ -165,17 +165,15 @@
 
     .pointer {
   position: absolute;
-  top: 0;
+  top: -20px;
   left: 50%;
   transform: translateX(-50%);
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-top: 30px solid red;
-  z-index: 10;
-
-  /* Ini yang penting biar goyangnya dari atas */
-  transform-origin: top center;
+  z-index: 20;
+  width: 40px;
+  height: auto;
+  animation: wiggle 1s infinite ease-in-out;
 }
+
 
 
     .spin-btn {
