update tester.html untuk visual preview spin wheel

--- a/public/tester.html
+++ b/public/tester.html
@@ -165,11 +165,11 @@
 
     .pointer {
   position: absolute;
-  top: -15px; /* dari -30px atau -20px, jadi -15px buat turunin dikit */
+  top: 10px; /* dari -30px atau -20px, jadi -15px buat turunin dikit */
   left: 50%;
   transform: translateX(-50%);
   z-index: 20;
-  width: 60px; /* gedein */
+  width: 62px; /* gedein */
   height: auto;
   animation: glowPulse 1s infinite;
   transform-origin: bottom center; /* biar goyang realistis */
@@ -410,7 +410,7 @@
     <div id="wheel-section">
       <div class="wheel-container">
         <img src="https://projectwarna.com/kuningtoto/Wheel-Of-Fortune.png" id="wheel" alt="Wheel">
-        <img src="https://projectwarna.com/kuningtoto/Pointer.png" id="pointer" alt="Pointer">
+        <img src="https://projectwarna.com/kuningtoto/POINTER-WHEEL-KUNINGTOTO.png" id="pointer" alt="Pointer">
       </div>
       <button class="spin-btn" onclick="spin()">Spin Sekarang!</button>
     </div>
