--- a/public/tester.html
+++ b/public/tester.html
@@ -468,7 +468,7 @@ const sliceAngle = 360 / hadiahList.length;
 const baseRotation = 360 * 10;
 const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
 const stopAngle = index * sliceAngle + (sliceAngle / 2) + offset;
-const finalRotation = baseRotation + stopAngle + 270; // pointer fix
+const finalRotation = baseRotation + stopAngle + 270 - (sliceAngle / 2);
 wheel.style.transform = `rotate(${finalRotation}deg)`;
 const pointer = document.getElementById("pointer");
 pointer.classList.add("goyang");
