--- a/public/tester.html
+++ b/public/tester.html
@@ -461,18 +461,20 @@ function spin() {
   spinBtn.textContent = "⏳ Memutar...";
   spinBtn.style.opacity = 0.6;
 
-  const index = getRandomHadiahIndexByWeight();
-hadiahTerpilih = hadiahList[index].text;
+  const sliceAngle = 360 / hadiahList.length;
+  const baseRotation = 360 * 10;
+  const offset = (Math.random() * sliceAngle); // 0 - 1 slice
+  const finalRotation = baseRotation + offset + 270; // arahkan pointer ke atas (jam 12)
+  
+  // putar roda
+  wheel.style.transition = 'transform 6s cubic-bezier(0.33, 1, 0.68, 1)';
+  wheel.style.transform = `rotate(${finalRotation}deg)`;
 
-const sliceAngle = 360 / hadiahList.length;
-const baseRotation = 360 * 10;
-const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
-const stopAngle = index * sliceAngle + (sliceAngle / 2) + offset;
-const finalRotation = baseRotation + stopAngle + 270 - (sliceAngle / 2);
-wheel.style.transform = `rotate(${finalRotation}deg)`;
-const pointer = document.getElementById("pointer");
-pointer.classList.add("goyang");
   setTimeout(() => {
+    const landedDeg = (finalRotation % 360 + 360) % 360; // normalisasi ke 0-360
+    const landedIndex = Math.floor((360 - landedDeg + sliceAngle / 2) % 360 / sliceAngle);
+    hadiahTerpilih = hadiahList[landedIndex].text;
+
     alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
     pushLiveFeed(userId, hadiahTerpilih);
 
@@ -496,10 +498,8 @@ pointer.classList.add("goyang");
     };
 
     isSpinning = false;
-    pointer.classList.remove("goyang");
   }, 6200);
 }
-
 
 function initWheel() {
   const canvasEl = document.getElementById("canvas");
