--- a/public/tester.html
+++ b/public/tester.html
@@ -425,13 +425,16 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <script>
-    const hadiahList = [
-      { text: 'Iphone 16 Pro Max', weight: 0.1, color: '#eae56f' },
-      { text: 'Realme Watch 3', weight: 0.5, color: '#89f26e' },
-      { text: 'Kredit 100.000', weight: 0.5, color: '#7de6ef' },
-      { text: 'Kredit 10.000', weight: 0.5, color: '#e7706f' },
-      { text: 'Zonk', weight: 94.5, color: '#aaa' }
-    ];
+  const hadiahList = [
+  { text: 'Zonk', weight: 24.9 },
+  { text: 'Kredit 10.000', weight: 0.1 },
+  { text: 'Zonk', weight: 24.9 },
+  { text: 'Kredit 100.000', weight: 0.1 },
+  { text: 'Zonk', weight: 24.9 },
+  { text: 'Realme Watch 3', weight: 0.1 },
+  { text: 'Zonk', weight: 24.9 },
+  { text: 'Iphone 16 Pro Max', weight: 0.1 },
+];
 
     let isSpinning = false;
 let hadiahTerpilih = '';
@@ -464,7 +467,7 @@ function spin() {
   const sliceAngle = 360 / hadiahList.length;
   const baseRotation = 360 * 10;
   const offset = (Math.random() * sliceAngle); // 0 - 1 slice
-  const finalRotation = baseRotation + offset + 270; // arahkan pointer ke atas (jam 12)
+  const finalRotation = baseRotation + stopAngle;
   
   // putar roda
   wheel.style.transition = 'transform 6s cubic-bezier(0.33, 1, 0.68, 1)';
