--- a/public/tester.html
+++ b/public/tester.html
@@ -477,10 +477,9 @@ function spin() {
   wheel.style.transform = `rotate(${finalRotation}deg)`;
 
   setTimeout(() => {
-  const rotationAngle = 270; // sesuai posisi pointer jam 12
+  const rotationAngle = 270; // karena pointer ada di atas (jam 12)
   const landedDeg = (finalRotation % 360 + 360) % 360;
 
-  // Koreksi hitung slice yang kena pointer
   const correctedDeg = (landedDeg - rotationAngle + 360) % 360;
   const landedIndex = Math.floor((correctedDeg + sliceAngle / 2) / sliceAngle) % hadiahList.length;
 
