update tester.html untuk visual preview spin wheel

--- a/public/tester.html
+++ b/public/tester.html
@@ -506,7 +506,7 @@ function spin() {
 function initWheel() {
   const canvasEl = document.getElementById("canvas");
   const pointerEl = document.querySelector(".pointer");
-  const tickSound = new Audio('https://projectwarna.com/assets/tick.mp3');
+  const tickSound = new Audio('https://projectwarna.com/kuningtoto/lucky-wheel.mp3');
   const winSound = new Audio('https://projectwarna.com/assets/win.mp3');
 
   theWheel = new Winwheel({
